# speech_recognition

./: .gitignore  pyproject.toml
app/: main.py
app/recognizer/: recognizer.py
