[tool.poetry]
name = "speech-recognition"
version = "0.1.0"
description = ""
authors = ["vyacheslav <kolesnikov.va@reliab.tech>"]

[tool.poetry.dependencies]
python = "^3.7"
SpeechRecognition = "^3.8.1"
pyaudio = "^0.2.11"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
